fix zindex issue on subnab
we need to use integer value insead of ID targer, as we want the subnav to appear below main nav

--- a/frontend/scripts/react-components/nav/top-nav/top-nav.scss
+++ b/frontend/scripts/react-components/nav/top-nav/top-nav.scss
@@ -18,6 +18,10 @@ $desktop-nav-sides-margin: 20px;
     background-color: $light-gray;
     box-shadow: 0 10px 20px 0 rgba($charcoal-grey, 0.2);
 
+    &.-no-shadow {
+      box-shadow: none;
+    }
+
     .top-nav-link,
     .top-nav-toggle-btn {
       color: $charcoal-grey;
